Por recomendacion de que el color del fondo tiene que ser light sky blue pues toca cambiar lo anterior, y tiene que parecerse al max a lo que nos dieron (quito el border radius)

--- a/src/app/actor/actor-list/actor-list.component.html
+++ b/src/app/actor/actor-list/actor-list.component.html
@@ -1,7 +1,15 @@
-<div class="actors-list">
-  @for(actor of actors; track actor.id) {
-    <div class="actor-item">
-      <span class="actor-name">{{ actor.name }}</span>
+<div class="actors-container">
+  <div class="popularity-header">
+    <div class="average-popularity">
+      <span class="popularity-label">Promedio popularidad:</span>
+      <span class="popularity-value">{{ averagePopularity }}</span>
     </div>
-  }
+  </div>
+  <div class="actors-list">
+    @for(actor of actors; track actor.id) {
+      <div class="actor-item">
+        <span class="actor-name">{{ actor.name }}</span>
+      </div>
+    }
+  </div>
 </div>
