--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -31,9 +31,9 @@
             <span class="detail-label">Género:</span>
             <span class="detail-value">{{ movie.genre }}</span>
           </div>
-          <div class="detail-row">
+          <div class="detail-row duration-row">
             <span class="detail-label">Duración:</span>
-            <span class="detail-value">{{ movie.duration }} min</span>
+            <span class="detail-value duration-value">{{ durationHours }}H y {{ durationMinutes }} m</span>
           </div>
         </div>
       </div>
