--- a/src/app/movie/movie-list/movie-list.component.css
+++ b/src/app/movie/movie-list/movie-list.component.css
@@ -1,8 +1,6 @@
 .movie-list-container {
   padding: 20px;
-  background: linear-gradient(135deg,
-   #66afea 0%,
-    #7a0202 100%);
+  background: lightskyblue;
   min-height: 100vh;
 }
 
